# 3BodyProblem

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-web.yml
scripts/: build_web.sh
tests/: test_physics.py  test_share.py
threebody/: __init__.py  app.py  physics.py  presets.py  render.py  share.py  ui.py  vec.py
